# fast-ndjson-processor

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
fast_ndjson_processor/: __init__.py  exceptions.py  fast_ndjson_processor.py  fast_ndjson_writer.py  functions.py  processor_mode.py  writer_mode.py
tests/: conftest.py  test_chunk_processing.py  test_edge_cases.py  test_enhanced_batching.py  test_functions.py  test_parallel_batching.py  test_processor.py  test_writer.py
