[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fast_ndjson_processor"
version = "1.0.0"
authors = [
    {name = "Berk Çakar"},
]
description = "A high-performance Python library for processing NDJSON files with multiprocessing support"
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "Topic :: Utilities",
    "Typing :: Typed",
]
keywords = ["ndjson", "json", "processing", "multiprocessing", "streaming", "performance"]
dependencies = [
    "orjson>=3.8.0",
    "tqdm>=4.64.0",
    "filelock>=3.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "mypy>=1.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8-pyproject>=1.2.3",
    "bandit>=1.7.0",
    "safety>=2.0.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/friberk/fast-ndjson-processor"
Repository = "https://github.com/friberk/fast-ndjson-processor"
"Bug Reports" = "https://github.com/friberk/fast-ndjson-processor/issues"
"Feature Requests" = "https://github.com/friberk/fast-ndjson-processor/discussions"

[tool.setuptools.packages.find]
include = ["fast_ndjson_processor*"]

[tool.setuptools.package-data]
"fast_ndjson_processor" = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.flake8]
max-line-length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tqdm"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=fast_ndjson_processor --cov-report=html --cov-report=term-missing"
